Fix icon spacing

--- a/src/components/Footer/SocialsAndLegal/SocialsAndLegal.scss
+++ b/src/components/Footer/SocialsAndLegal/SocialsAndLegal.scss
@@ -17,7 +17,7 @@ $spacing-md: 15px;
 
   .sm-icon {
     font-size: 1.84rem;
-    margin: 0 .88rem;
+    margin: 0 .86rem;
     color: white;
   }
 
